feat: improve login flow

--- a/src/components/handle-modal/handle-modal.module.css
+++ b/src/components/handle-modal/handle-modal.module.css
@@ -5,6 +5,7 @@
 	height: 100vh;
 	width: 100vw;
 	background-color: rgba(25, 142, 220, 0.211);
+	z-index: 10;
 }
 
 .modal {
@@ -12,6 +13,7 @@
 	border-radius: 1rem;
 	padding: 1rem 4rem;
 	width: min-content;
+	z-index: 20;
 }
 
 .modalHeader {
